scss/blocks/page-footer.scss
.page-footer{
	margin: 0;
	padding: 0;
}
.page-footer__wrapper{
	min-height: 130px;
	color: white;
	display: flex;
	flex-direction: column;
	align-items: center;
	background-color: $bg-dark-color;
}
.social-networks{
	display: flex;
	margin-top: 35px;
}

.list--instagram, .list__linkedin, .list__facebook{
	position: relative;
	width: 26px;
	height: 26px;
	opacity: 0.6;
}
.list--instagram:hover, .list__linkedin:hover, .list__facebook:hover{
	opacity: 1;
}
.social-networks__list:nth-child(2){
	margin: 0 25px;
}
.social-networks__list:nth-child(2)::before,
.social-networks__list:nth-child(2)::after{
	position: absolute;
	content: "";
	width: 1px;
	height: 100%;
	top: 0;
	background-color: white;
}
.social-networks__list:nth-child(2)::before{
	left: 0;
	margin-left: -12.5px;
}
.social-networks__list:nth-child(2)::after{
	right: 0;
	margin-right: -12.5px;
}
.сopyright{
	text-align: center;
}
@media (max-width: $mobile-width){
	.social-networks{
		margin-top: 20px;
	}
	.page-footer__wrapper{
		min-height: 60px;
	}
	.сopyright{
		display: none;
	}
}

